--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
     "@babel/plugin-transform-react-jsx": "^7.24.6",
     "@babel/preset-react": "^7.24.6",
     "@emotion/react": "^11.11.4",
@@ -22,20 +21,19 @@
     "@testing-library/user-event": "^13.5.0",
     "@vitejs/plugin-react": "^4.3.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "sass": "^1.55.0",
+    "styled-components": "^6.1.11",
     "vite": "^5.2.12",
     "vite-plugin-env-compatible": "^2.0.1",
     "vite-plugin-svgr": "^4.2.0",
-    "web-vitals": "^2.1.4",
-    "axios": "^1.6.8",
-    "bootstrap": "^5.3.3",
-    "prop-types": "^15.8.1",
-    "react-bootstrap": "^2.10.2",
-    "styled-components": "^6.1.11"
-
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
